--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -111,15 +111,17 @@
 
 
     <EditText
-        android:background="@drawable/edittextstyle"
         android:id="@+id/edSotien"
+        android:background="@drawable/edittextstyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Nhập số tiền"
         android:inputType="number"
         android:textSize="30sp"
         android:layout_marginTop="2sp"
-        android:padding="5sp"
+        android:paddingLeft="20dp"
+        android:paddingBottom="5dp"
+        android:paddingTop="5dp"
         android:layout_margin="8dp">
     </EditText>
 
