--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     android:gravity="center"
     android:background="@drawable/sgin_in_bg"
+    android:padding="16dp"
     tools:context=".RegisterActivity">
 
     <LinearLayout
