--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,7 +19,7 @@
         android:id="@+id/main_fragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#9BBA9C"
+        android:background="@color/light_gray"
         app:layout_constraintBottom_toTopOf="@id/navMenu"
         app:layout_constraintLeft_toLeftOf="parent" />
 
