--- a/app/src/main/res/layout/itemlayout.xml
+++ b/app/src/main/res/layout/itemlayout.xml
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="100dp"
     android:padding="4dp"
+    android:layout_margin="10dp"
+    android:background="@drawable/white_shape"
+
     >
     <ImageView
         android:layout_width="100dp"
@@ -14,7 +17,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="name"
-        android:textColor="@color/teal_200"
+        android:textColor="@color/black"
         android:gravity="center"
         android:textSize="20sp"
         android:layout_marginLeft="16dp"
